Static pages controller did not have the aboutSend method defined

--- a/studio_ghibli_store/app/views/static_pages/category.html.erb
+++ b/studio_ghibli_store/app/views/static_pages/category.html.erb
@@ -14,7 +14,7 @@
             <%= product.description %>
         </p>
         <p>
-            <%= product.cost_price %>
+            <%= number_to_currency(product.cost_price, :unit => "€") %>
             <br />
             <%= product.category %>
         </p>
